--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -33,7 +33,7 @@ jobs:
           format: 'sarif'
           output: 'trivy-results.sarif'
           
-     # - name: Upload Trivy scan results to GitHub Security tab
-     #   uses: github/codeq1-action/upload-sarif@v2
-     #   with:
-     #     sarif_file: 'trivy-results.sarif'
+      - name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: 'trivy-results.sarif'
