--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -27,12 +27,10 @@ jobs:
         uses: actions/checkout@v3
 
 ########### TEACHER ##########
-#       - name: Generate tarball from image
-#         run: |
-#           docker pull nginx:latest
-#           docker save -o vunl-image.tar nginx:latest
-          
-#           THEN RUN TARBALL
+      - name: Generate tarball from image
+        run: |
+          docker pull nginx:latest
+          docker save -o vunl-image.tar nginx:latest          
         #######
 
       - name: Run Trivy vulnerability scanner
@@ -40,11 +38,11 @@ jobs:
         with:
           image-ref: 'nginx:latest'
           format: 'sarif'
-          output: 'trivy-results.sarif'
+#           output: 'trivy-results.sarif'
           
-      - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          sarif_file: 'trivy-results.sarif'
+#       - name: Upload Trivy scan results to GitHub Security tab
+#         uses: github/codeql-action/upload-sarif@v2
+#         with:
+#           sarif_file: 'trivy-results.sarif'
 
 
