--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Bandit Scan
 
 # Controls when the workflow will run
 on:
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Bandit scan
-        uses: mdegis/bandit-action@v1
+        uses: mdegis/bandit-action@master
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           path: "."
